<resources>
    <string name="app_name" translatable="false">RoomChoice</string>
    <string name="logout" translatable="false">Cerrar Sesión</string>
    <string name="botonTerminar">Terminar</string>
    <string name="botonListo">Listo</string>
    <string name="textoDecidiendoQuienExpone">Decidiendo quién expone...</string>
    <string name="textoEsperandoModalidad">Esperando a que el RRHH elija modalidad</string>
    <string name="tituloPreviaLeer">Es su turno</string>
    <string name="avisarCogerPapelYBoli">A continuación leerá un texto sobre el que realizará una exposición. Coja papel y boli para tomar notas</string>
    <string name="tituloTexto1Juego1">LA ECONOMÍA, EN LAS MANOS DE UN VIRUS</string>
    <string name="tituloTexto2Juego1">NO ES SUFICIENTE</string>
    <string name="tituloTexto3Juego1">VIVIR SIN BESOS</string>
    <string name="tituloTexto4Juego1">EL GUIÓN DE LA VIDA</string>
    <string name="texto1Juego1">Uno de los efectos secundarios del coronavirus ha sido el de comprobar la absoluta dependencia de la economía mundial de China. Como consecuencia de lo anterior, es evidente que la expansión del Covid-19 está siendo inevitable por la interconexión del mundo, esa globalización que hace que la cadena productiva recorra miles de kilómetros y decenas de países. Era sabido, pero no hasta ahora un factor tan imprevisible como la expansión de un virus ha demostrado, que la economía del planeta pueda ralentizarse si la maquinaria industrial y financiera de China se frena. En este caso, y a diferencia de la crisis económica de 2008, sería plenamente industrial y, además, afecta al corazón de la llamada fábrica del mundo. En el caso de España, el primer impacto se vería en el turismo, algo que amenazará a muchos más países, pero que en nuestro caso tendrá efectos más graves: sólo baste tener en cuenta que ayer mismo las compañías aéreas calcularon en 102.000 millones de euros las pérdidas. Pero hay otros sectores estratégicos amenazados, como el del automóvil, dado que una buena parte de los componentes proceden de China, donde la producción se ha paralizado. Pero, a diferencia de la anterior recesión, por lo menos en la que puede venir se sabe la causa: recordemos que entonces Europa se tapaba los ojos diciendo que la crisis era de las «subprime» de EEUU, lo que provocó tomar medidas con retraso. El ministro Pedro Solbes cuantificó el impacto de la crisis financiera muy por debajo, error que ahora ha reconocido. La ministra de Asuntos Económicos, Nadia Calviño, no se atreve a hacer previsiones y confía en una recuperación económica en los «próximos trimestres» tras el impacto inicial del Covid-19, aunque sus cálculos no están en sus manos, sino en la evolución del virus. Sin embargo, comparte las previsiones de la OCDE, que calcula la ralentización mundial de la economía del 2,9% al 2,4%. Si Calviño ha admitido que la desaceleración tiró por tierra sus previsiones para la preparación de los Presupuestos, de manera que el crecimiento del PIB se quedó en el 1,6%, todavía no contaba con los efectos del coronavirus. Es paradójico que el Gobierno pase de depender de ERC para aprobar las cuentas de los efectos de un virus, y que es posible que en esta coyuntura económica le convenga más mantener los históricos presupuestos de Montoro. Aunque sea una desaceleración coyuntural, según augura el Gobierno, las medidas que ha anunciado –flexibilizar las reglas fiscales a las empresas afectadas o que los trabajadores no consuman el paro en los expedientes de regulación de empleo temporales–, deberán corresponder a una partida económica. De momento, y ante las previsiones de la evolución de la epidemia, el Ibex ha vuelto a resentirse con una caída del 15% en dos semanas –ayer cerró con un descenso del 3,5%–, lo que supone unas pérdidas de 96.000 millones de euros. Si China y EE UU, como primera y segunda economías, serían los países más afectados, estos últimos han reaccionado: la Reserva Federal anunció el pasado lunes la mayor rebaja de tipos desde 2008, lo que recuerda la misma reacción que tuvo Europa con la caída de Lehman Brothers. Si entonces fue China quien inyectó dinero al sistema financiero mundial, nada indica que ahora no lo vuelva a hacer si es necesario, lo que sin duda volverá poner al mundo ante un hecho evidente: la dependencia ante la gran potencia asiática. La gran incógnita es si la economía mundial cambiará en el sentido de revisar su dependencia hacia China, de la misma manera que lo está haciendo EE UU, que, pese a Trump, vuelve a mirar a México como la factoría que siempre fue para su economía. A diferencia de 2008, en esta ocasión la crisis dependerá directamente de la ciencia.</string>
    <string name="texto2Juego1">El secretario general de Naciones Unidas, António Guterres, había pedido a los países participantes en la cumbre del clima celebrada en Nueva York que llevaran compromisos y no discursos, pero el encuentro terminó con más retórica que planes de acción. Solo 70 de los casi 200 países que suscribieron los acuerdos de París para luchar contra el cambio climático se han comprometido a revisar al alza sus planes de reducción de emisiones, y entre ellos no están los tres principales emisores: China, Estados Unidos e India, que, junto a la Unión Europea, son responsables del 60% de los gases que se emiten a la atmósfera.
La UE sigue liderando la estrategia de mayor exigencia, aunque ni siquiera ha podido presentar un plan unitario. La falta de compromiso ha puesto de manifiesto que el acuerdo de París se cerró en parte en falso al permitir que fuera cada país el que estableciera sus propios objetivos de reducción de las emisiones. Los planes conocidos hasta ahora no permitirán, como se acordó en París, que la temperatura media del planeta no suba a final de este siglo más de 1,5°C sobre los niveles preindustriales, teniendo en cuenta que ya ha subido 1°C. Para esto, en 2030 se tendrían que haber reducido las emisiones un 55% por debajo de los niveles de 1990, en lugar del 40% establecido en París. Con el actual nivel de compromisos, a final de siglo la temperatura se elevaría más de 3°C y habrían desaparecido todos los hielos marinos, lo que sería una catástrofe.
Naciones Unidas pretende que en la primera revisión de los planes de reducción, prevista para 2020, pueda elevarse el nivel de exigencia, pero la renuencia de los países más contaminantes pone en peligro incluso los acuerdos ya alcanzados. Y eso ocurre mientras se conocen nuevos datos que demuestran que los efectos del calentamiento son más rápidos y más graves de lo que se había estimado. Así lo corrobora el último informe de la ONU sobre el calentamiento de los océanos y el deshielo de los polos. En su afán por no alarmar y generar rechazo, los científicos habrían podido subestimar algunas de las sinergias que el calentamiento provoca.
El aumento de la frecuencia e intensidad de manifestaciones climáticas extremas nos sitúa ante la evidencia de que ya estamos pagando un elevado precio por la inacción. Combatir el calentamiento global exigirá un cambio energético y de modelo productivo. Algunos sectores, como los de la energía o la automoción, tendrán que asumir cambios onerosos, pero no hacerlo será a la larga más costoso. La idea es convertir las inversiones necesarias en una oportunidad de mejora. La transición energética no solo es necesaria para evitar el peor escenario climático a final de siglo, sino para reducir las muertes prematuras que ya se producen a causa de la contaminación procedente del uso de combustibles fósiles en el transporte. Hay que celebrar que el Gobierno español haya enviado por fin a Bruselas un ambicioso plan para reducir la contaminación de las ciudades.
Los Gobiernos deben escuchar a la ciudadanía, cada vez más sensibilizada por la emergencia climática, como lo demuestra el éxito de iniciativas como Friday for Future, entre otras razones porque cada vez son más los damnificados por alteraciones extremas del clima, que impactan de forma azarosa y golpean con más fuerza a quienes están en situación más vulnerable.
</string>
    <string name="texto3Juego1">En Los diarios de Adán y Eva, un delicioso relato de Mark Twain que hoy no resistiría la prueba del algodón de la corrección política, Adán se adapta tan bien a la expulsión del paraíso que encuentra rápidamente el lado práctico a ese nuevo mundo donde se ha de convivir con la muerte: “Nos hicimos con varias pieles de los animales muertos. Le pedí (a Eva) que los cosiera, a fin de tener unos trajes adecuados para las ocasiones públicas. He de admitir que ella me hace mucha compañía. Dice que a partir de ahora debemos trabajar para ganarnos la vida, pues así está mandado. En esto ella me será útil, pues el encargado de dirigirlo todo seré yo”.
Así es como Adán, expulsado del Edén por tomar del fruto de Eva, se hace jefe de este universo que nosotros hemos heredado en una obra tan ingeniosa que nos sirve para actualizar los símbolos de nuestro tiempo.
Y no vamos a circular desde aquí hacia el debate feminista que las amazónicas nos han puesto tan fácil, no, sino al de la carnalidad. El pecado, el contacto, la manzana prohibida que ofreció la serpiente a Eva, y esta a Adán, truncó el paraíso y abrió la puerta a un mundo de muerte y enfermedades que en esencia ensuciaba la vida sin carnalidad del jardín del Edén.
Estos días, parece que todo nos redirige a ese falso universo en el que el pecado está excluido: no podemos tocarnos, besarnos o tratarnos a menos de un metro de distancia. Las reuniones son virtuales, se cancelan ferias del libro, del móvil, congresos o hasta el estreno de James Bond. Muchos partidos serán sin público. Un ministro alemán le niega la mano a Merkel, el papa Francisco cancela audiencias mientras el mundo teme por su tos y la Iglesia anula los apretones de mano al dar la paz. La cultura del roce que tanto nos gusta, que tanto necesitamos y que hemos aprendido a desarrollar de tantas formas posibles, se tambalea para dar paso a un paraíso muy distinto del Edén, y es el de los besos por emoticono, las relaciones virtuales, la victoria de la tecnología y la vida sin reuniones. El derecho a roce ha muerto. China reivindica su capacidad de control facial de la población -que tanto nos asusta a los que aún creemos en la libertad- como un enorme instrumento contra el virus, y las redes celebran que las relaciones que favorecen no nos pueden contaminar.
Pero no salimos ganando en este nuevo paraíso sin pecado concebido. Muchos queremos abrazar, queremos besar, queremos contaminarnos de afecto y eso era lo bueno de este mundo imperfecto,  donde se puede morir pero también amar. Y acataremos los protocolos como Dios manda, claro que sí, pero recordaremos la frase que Mark Twain coloca en la tumba de Eva: “Dondequiera que ella estuviera, allí se hallaba el Paraíso. Adán”. Pues eso.
</string>
    <string name="tituloSalaEscucharExposicionTexto">Esperando exposición...</string>
    <string name="empezarEscucharButton">Escuchar Exposición</string>
    <string name="tituloPantallaPreviaJuego2LeerTextoSalaAptitudes">Juego 2. Lectura de Texto</string>
    <string name="explicacionJuego2SalaAptitudes">A continuación leerá un texto sobre el cual realizará un test para valorar lo que ha entendido.
    Tenga en cuenta que el tiempo que tarde en leer el texto será valorado</string>
    <string name="textoProgressBar">Esperando al resto de jugadores...</string>
</resources>