<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_bottom_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80"/>

    <TextView
        android:id="@+id/tituloPantallaPreviaJuego2LeerTextoSalaAptitudes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tituloPantallaPreviaJuego2LeerTextoSalaAptitudes"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_margin_title"/>

    <TextView
        android:id="@+id/avisoEmpezarALeer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/explicacionJuego2SalaAptitudes"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_margin_bottom_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_margin_title" />

    <ProgressBar
        android:id="@+id/progressBarPreviaJuego2"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="592dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/listoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botones_azules"
        android:onClick="onClickComenzarALeer"
        android:text="@string/botonListo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline_margin_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toBottomOf="@+id/guideline_margin_bottom_up" />

    <TextView
        android:id="@+id/textoProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:text="@string/textoProgressBar"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toBottomOf="@+id/listoButton" />
</androidx.constraintlayout.widget.ConstraintLayout>