<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/avisoEmpezarAExponer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tituloPreviaLeer"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/guideline_margin_top"
        app:layout_constraintEnd_toEndOf="@id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/consejoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/avisarCogerPapelYBoli"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toTopOf="@id/guideline_margin_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toBottomOf="@id/guideline_margin_top"/>

    <Button
        android:id="@+id/empezarALeerTextoExposicionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botones_azules"
        android:onClick="onClickEmpezarALeerExposicionButton"
        android:text="@string/botonListo"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@id/guideline_margin_left"
        app:layout_constraintTop_toBottomOf="@+id/guideline_margin_bottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>
</androidx.constraintlayout.widget.ConstraintLayout>