<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".salaaptitudes.juego1.EscucharExposicionSalaAptitudes">


    <TextView
        android:id="@+id/tituloEscucharExposicion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tituloSalaEscucharExposicionTexto"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_title"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoInformacionEsperandoExposicion"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:padding="25sp"
        android:textSize="20sp"
        android:background="@drawable/custom_textview"
        app:layout_constraintBottom_toTopOf="@+id/guideline_center_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom_title" />


    <ProgressBar
        android:id="@+id/progressBarEsperandoExposicion"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:indeterminateTint="#008CFF"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_margin_bottom_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_center_up" />

    <Button
        android:id="@+id/escucharExposicionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botones_azules"
        android:onClick="onClickReproducir"
        android:text="@string/empezarEscucharButton"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline_margin_bottom_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toBottomOf="@+id/guideline_center_up" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_bottom_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />


    <Button
        android:id="@+id/terminarEscucharButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botones_verdes"
        android:onClick="onClickTerminarEscuchar"
        android:text="@string/botonTerminar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline_margin_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_margin_bottom_up"
        app:layout_constraintVertical_bias="0.475" />


</androidx.constraintlayout.widget.ConstraintLayout>